--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <p>Para adicionar uma quebra de linha, você pode usar a tag <code>&lt;br&gt;</code>. Por exemplo:<br>Esta frase está em uma nova linha.</p>
     
         <p>Você também pode criar links usando a tag <code>&lt;a&gt;</code>. Veja um exemplo abaixo:</p>
-        <a href="https://www.exemplo.com">Visite o site exemplo</a>
+        <a href="https://www.youtube.com">Visite o site exemplo</a>
+        <br>
+        <img src="image.jfif" alt="">
     </body>
     </html>
